G2-1148 Upgrade to Java11; close process trees